force-app/main/default/objects/Descuento__c/Descuento__c.object-meta.xml
<CustomObject>
    <label>Descuento</label>
    <nameField>
        <label>Nombre de Descuento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Descuentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>