force-app/main/default/objects/Descuento__c/fields/IMP_CanalVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_CanalVentas__c</fullName>
    <description>Canal de distribución que permite la entrega de la mercancía o prestación de servicios. Se debe enviar con clave SAP.</description>
    <label>Canal de ventas</label>
    <length>3</length>
    <type>Text</type>
</CustomField>