force-app/main/default/objects/Descuento__c/fields/IMP_ClaseCondicion__c.field-meta.xml
<CustomField>
    <fullName>IMP_ClaseCondicion__c</fullName>
    <description>La clase de condición indica, por ejemplo, si el sistema debe utilizar recargos o descuentos u otros elementos de precios como los costes de transporte e impuestos en la determinación de precios.</description>
    <label>Clase de condición</label>
    <length>5</length>
    <type>Text</type>
</CustomField>