force-app/main/default/objects/Descuento__c/fields/IMP_ClaseDocumentoVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_ClaseDocumentoVentas__c</fullName>
    <label>Clase de documento de ventas</label>
    <length>6</length>
    <type>Text</type>
</CustomField>