force-app/main/default/objects/Descuento__c/fields/IMP_FechaFinal__c.field-meta.xml
<CustomField>
    <fullName>IMP_FechaFinal__c</fullName>
    <description>Fecha en la que deja de tener vigencia el registro de condición.</description>
    <label>Fecha final</label>
    <type>Date</type>
</CustomField>