force-app/main/default/objects/Descuento__c/fields/IMP_FechaInicial__c.field-meta.xml
<CustomField>
    <fullName>IMP_FechaInicial__c</fullName>
    <description>Fecha a partir de la cual es válida la condición.</description>
    <label>Fecha inicial</label>
    <type>Date</type>
</CustomField>