force-app/main/default/objects/Descuento__c/fields/IMP_GrupoArticulos__c.field-meta.xml
<CustomField>
    <fullName>IMP_GrupoArticulos__c</fullName>
    <label>Grupo de artículos</label>
    <length>12</length>
    <type>Text</type>
</CustomField>