force-app/main/default/objects/Descuento__c/fields/IMP_GrupoClientes__c.field-meta.xml
<CustomField>
    <fullName>IMP_GrupoClientes__c</fullName>
    <description>a pertenencia de un cliente a un determinado grupo se define ya sea en el registro maestro del solicitante o bien directamente en el documento de ventas.</description>
    <label>Grupo de clientes</label>
    <length>4</length>
    <type>Text</type>
</CustomField>