force-app/main/default/objects/Descuento__c/fields/IMP_GrupoMateriales__c.field-meta.xml
<CustomField>
    <fullName>IMP_GrupoMateriales__c</fullName>
    <description>El grupo de materiales es la agrupación de materiales para los que son válidas las mismas condiciones.</description>
    <label>Grupo de materiales</label>
    <length>4</length>
    <type>Text</type>
</CustomField>