force-app/main/default/objects/Descuento__c/fields/IMP_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IMP_IdExterno__c</fullName>
    <description>Campo usado para almacenar el id externo de los descuentos</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>