force-app/main/default/objects/Descuento__c/fields/IMP_ImportePorcentaje__c.field-meta.xml
<CustomField>
    <fullName>IMP_ImportePorcentaje__c</fullName>
    <description>Importe o porcentaje que establece de qué modo debe calcular el sistema esta condición al efectuar la determinación automática de precios. La clase de condición determina si se trata de un importe fijo o de un porcentaje.</description>
    <label>Importe/Porcentaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>