force-app/main/default/objects/Descuento__c/fields/IMP_ListaPrecios__c.field-meta.xml
<CustomField>
    <fullName>IMP_ListaPrecios__c</fullName>
    <label>Lista de precios</label>
    <length>4</length>
    <type>Text</type>
</CustomField>