force-app/main/default/objects/Descuento__c/fields/IMP_Lote__c.field-meta.xml
<CustomField>
    <fullName>IMP_Lote__c</fullName>
    <description>El número de lote es la asignación que se le da a el material fabricado en lotes, partidas o lotes de producción a un lote determinado de forma unívoca.</description>
    <label>Lote</label>
    <length>12</length>
    <type>Text</type>
</CustomField>