force-app/main/default/objects/Descuento__c/fields/IMP_NumeroCliente__c.field-meta.xml
<CustomField>
    <fullName>IMP_NumeroCliente__c</fullName>
    <description>Número de cliente registrado en SAP por el cual se debe filtrar la información a consultar.</description>
    <label>Número de cliente</label>
    <length>12</length>
    <type>Text</type>
</CustomField>