force-app/main/default/objects/Descuento__c/fields/IMP_NumeroMaterial__c.field-meta.xml
<CustomField>
    <fullName>IMP_NumeroMaterial__c</fullName>
    <description>ID del material registrado en SAP.</description>
    <label>Número material</label>
    <length>20</length>
    <type>Text</type>
</CustomField>