force-app/main/default/objects/Descuento__c/fields/IMP_OrganizacionVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_OrganizacionVentas__c</fullName>
    <description>Establece la organización de ventas responsable del tratamiento del pedido.</description>
    <label>Organización de ventas</label>
    <length>5</length>
    <type>Text</type>
</CustomField>