force-app/main/default/objects/Descuento__c/fields/IMP_SecuenciaAcceso__c.field-meta.xml
<CustomField>
    <fullName>IMP_SecuenciaAcceso__c</fullName>
    <label>Secuencia de acceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A305</fullName>
            </value>
            <value>
                <fullName>A999</fullName>
            </value>
            <value>
                <fullName>A993</fullName>
            </value>
            <value>
                <fullName>A996</fullName>
            </value>
            <value>
                <fullName>A997</fullName>
            </value>
            <value>
                <fullName>A940</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>