force-app/main/default/objects/Descuento__c/fields/IMP_UnidadCondicion__c.field-meta.xml
<CustomField>
    <fullName>IMP_UnidadCondicion__c</fullName>
    <label>Unidad de condición(Moneda o Porcentaje)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>