force-app/main/default/objects/Descuento__c/fields/IMP_Valido__c.field-meta.xml
<CustomField>
    <fullName>IMP_Valido__c</fullName>
    <formula>IMP_FechaInicial__c &lt;= TODAY() &amp;&amp;  IMP_FechaFinal__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valido</label>
    <type>Checkbox</type>
</CustomField>