force-app/main/default/objects/Descuento__c/fields/Pol_tica_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>Pol_tica_de_descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación a la política de descuento</description>
    <label>Política de descuento</label>
    <referenceTo>PoliticaDescuento__c</referenceTo>
    <relationshipLabel>Descuentos</relationshipLabel>
    <relationshipName>Descuentos</relationshipName>
    <type>Lookup</type>
</CustomField>