force-app/main/default/objects/Descuento__c/listViews/Secuencia_A940.listView-meta.xml
<ListView>
    <fullName>Secuencia_A940</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IMP_SecuenciaAcceso__c</field>
        <operation>equals</operation>
        <value>A940</value>
    </filters>
    <label>Secuencia A940</label>
</ListView>