force-app/main/default/objects/Descuento__c/listViews/Secuencia_A996.listView-meta.xml
<ListView>
    <fullName>Secuencia_A996</fullName>
    <columns>NAME</columns>
    <columns>IMP_ClaseCondicion__c</columns>
    <columns>IMP_OrganizacionVentas__c</columns>
    <columns>IMP_OficinaVentas__c</columns>
    <columns>IMP_ListaPrecios__c</columns>
    <columns>IMP_NumeroMaterial__c</columns>
    <columns>IMP_FechaInicial__c</columns>
    <columns>IMP_FechaFinal__c</columns>
    <columns>IMP_ImportePorcentaje__c</columns>
    <columns>IMP_UnidadCondicion__c</columns>
    <columns>IMP_Valido__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IMP_OrganizacionVentas__c</field>
        <operation>equals</operation>
        <value>IMPQ</value>
    </filters>
    <filters>
        <field>IMP_OficinaVentas__c</field>
        <operation>equals</operation>
        <value>MIXC</value>
    </filters>
    <filters>
        <field>IMP_ListaPrecios__c</field>
        <operation>equals</operation>
        <value>03</value>
    </filters>
    <filters>
        <field>IMP_NumeroMaterial__c</field>
        <operation>equals</operation>
        <value>10000319</value>
    </filters>
    <label>Secuencia A996</label>
</ListView>