force-app/main/default/objects/Descuento__c/listViews/Secuencia_A999.listView-meta.xml
<ListView>
    <fullName>Secuencia_A999</fullName>
    <columns>NAME</columns>
    <columns>IMP_ClaseCondicion__c</columns>
    <columns>IMP_OrganizacionVentas__c</columns>
    <columns>IMP_OficinaVentas__c</columns>
    <columns>IMP_ListaPrecios__c</columns>
    <columns>IMP_NumeroMaterial__c</columns>
    <columns>IMP_Lote__c</columns>
    <columns>IMP_FechaInicial__c</columns>
    <columns>IMP_FechaFinal__c</columns>
    <columns>IMP_ImportePorcentaje__c</columns>
    <columns>IMP_UnidadCondicion__c</columns>
    <columns>IMP_Valido__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IMP_SecuenciaAcceso__c</field>
        <operation>equals</operation>
        <value>A999</value>
    </filters>
    <label>Secuencia A999</label>
</ListView>