force-app/main/default/objects/Descuento__c/listViews/Todo.listView-meta.xml
<ListView>
    <fullName>Todo</fullName>
    <columns>NAME</columns>
    <columns>IMP_ClaseCondicion__c</columns>
    <columns>IMP_OrganizacionVentas__c</columns>
    <columns>IMP_OficinaVentas__c</columns>
    <columns>IMP_NumeroMaterial__c</columns>
    <columns>IMP_ImportePorcentaje__c</columns>
    <columns>IMP_FechaInicial__c</columns>
    <columns>IMP_FechaFinal__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todo</label>
</ListView>